# TronDB

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.deploy.yml  docker-compose.yml
crates/trondb-cli/: Cargo.toml
crates/trondb-cli/src/: display.rs  main.rs
crates/trondb-core/: Cargo.toml
crates/trondb-core/benches/: engine_bench.rs
crates/trondb-core/src/: cost.rs  edge.rs  error.rs  executor.rs  field_index.rs  hnsw_snapshot.rs  hybrid.rs  index.rs  inference.rs  lib.rs  location.rs  metrics.rs  optimise.rs  planner.rs  quantise.rs  result.rs  slow_log.rs  sparse_index.rs  store.rs  types.rs  vectoriser.rs  warning.rs
crates/trondb-proto/: Cargo.toml  build.rs
crates/trondb-proto/proto/: trondb.proto
crates/trondb-proto/src/: convert_health.rs  convert_plan.rs  convert_result.rs  convert_wal.rs  lib.rs
crates/trondb-routing/: Cargo.toml
crates/trondb-routing/src/: affinity.rs  config.rs  error.rs  eviction.rs  health.rs  lib.rs  migrator.rs  node.rs  router.rs  startup.rs  sweeper.rs
crates/trondb-server/: Cargo.toml
crates/trondb-server/src/: config.rs  lib.rs  location_stream.rs  main.rs  metrics.rs  remote_node.rs  replication.rs  scatter.rs  service.rs  stream_health.rs  write_forward.rs
crates/trondb-server/tests/: integration.rs
crates/trondb-tql/: Cargo.toml
crates/trondb-tql/src/: ast.rs  error.rs  lib.rs  parser.rs  token.rs
crates/trondb-vectoriser/: Cargo.toml
crates/trondb-vectoriser/src/: external.rs  lib.rs  mock.rs  network.rs  onnx_dense.rs  onnx_sparse.rs  passthrough.rs  recipe.rs
crates/trondb-wal/: Cargo.toml
crates/trondb-wal/src/: buffer.rs  config.rs  error.rs  lib.rs  record.rs  recovery.rs  segment.rs  writer.rs
docs/superpowers/plans/: 2026-03-10-trondb-phase2.md  2026-03-10-trondb-poc.md  2026-03-11-trondb-phase3.md  2026-03-11-trondb-phase4.md  2026-03-11-trondb-phase5.md  2026-03-11-trondb-phase5a.md  2026-03-11-trondb-phase6.md  2026-03-11-trondb-phase7a.md  2026-03-11-trondb-phase7b.md  2026-03-11-trondb-phase8.md  2026-03-11-trondb-phase9.md  2026-03-12-phase-10-vectoriser.md  2026-03-12-phase-11-inference.md  2026-03-13-graph-scoped-search.md  2026-03-13-phase-12-joins-traverse-match.md  2026-03-13-phase-12-query-language.md  2026-03-13-phase-13-planner-cost-model.md
docs/superpowers/specs/: 2026-03-10-trondb-phase2-design.md  2026-03-10-trondb-poc-design.md  2026-03-11-trondb-phase3-design.md  2026-03-11-trondb-phase4-design.md  2026-03-11-trondb-phase5-design.md  2026-03-11-trondb-phase5a-design.md  2026-03-11-trondb-phase6-design.md  2026-03-11-trondb-phase7a-design.md  2026-03-11-trondb-phase7b-design.md  2026-03-11-trondb-phase8-design.md  2026-03-11-trondb-phase9-design.md  2026-03-12-trondb-phase11-design.md  2026-03-12-trondb-roadmap-phases-10-15.md  2026-03-13-graph-scoped-search-design.md
tests/: smoke.tql
tests/cluster/: cluster_test.sh  test_queries.tql
tools/: johnny_benchmark.py
