[workspace]
resolver = "2"
members = [
    "crates/trondb-core",
    "crates/trondb-tql",
    "crates/trondb-cli",
    "crates/trondb-wal",
    "crates/trondb-routing",
]

[workspace.dependencies]
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
dashmap = "6"
logos = "0.15"
thiserror = "2"
comfy-table = "7"
rustyline = "15"
fjall = "2"
rmp-serde = "1"
crc32fast = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs", "time", "io-util", "macros"] }
hnsw_rs = "0.3.4"
anndists = "0.1.4"
bincode = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
