[workspace]
resolver = "2"
members = [
    "crates/trondb-core",
    "crates/trondb-tql",
    "crates/trondb-cli",
    "crates/trondb-wal",
    "crates/trondb-routing",
    "crates/trondb-proto",
    "crates/trondb-server",
    "crates/trondb-vectoriser",
]

[workspace.dependencies]
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
dashmap = "6"
logos = "0.15"
thiserror = "2"
comfy-table = "7"
rustyline = "15"
fjall = "2"
rmp-serde = "1"
crc32fast = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs", "time", "io-util", "macros", "signal"] }
hnsw_rs = "0.3.4"
anndists = "0.1.4"
bincode = "1"
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.13"
tonic-health = "0.13"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
sysinfo = "0.34"
toml = "0.8"
tokio-stream = "0.1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
