[package]
name = "trondb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
trondb-tql = { path = "../trondb-tql" }
trondb-wal = { path = "../trondb-wal" }
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
bytes.workspace = true
serde.workspace = true
bincode.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
fjall.workspace = true
rmp-serde.workspace = true
tokio.workspace = true
dashmap.workspace = true
hnsw_rs.workspace = true
anndists.workspace = true

[dev-dependencies]
tempfile = "3"
