[package]
name = "trondb-routing"
version = "0.1.0"
edition = "2021"

[dependencies]
trondb-core = { path = "../trondb-core" }
trondb-tql = { path = "../trondb-tql" }
trondb-wal = { path = "../trondb-wal" }
async-trait.workspace = true
tokio.workspace = true
dashmap.workspace = true
serde.workspace = true
thiserror.workspace = true
rmp-serde = "1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
