[package]
name = "trondb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
trondb-core = { path = "../trondb-core" }
trondb-tql = { path = "../trondb-tql" }
trondb-wal = { path = "../trondb-wal" }
trondb-routing = { path = "../trondb-routing" }
trondb-proto = { path = "../trondb-proto" }
tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
