[package]
name = "trondb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
trondb-core = { path = "../trondb-core" }
trondb-tql = { path = "../trondb-tql" }
trondb-wal = { path = "../trondb-wal" }
trondb-routing = { path = "../trondb-routing" }
trondb-proto = { path = "../trondb-proto" }
trondb-vectoriser = { path = "../trondb-vectoriser", features = ["onnx"] }
dashmap = { workspace = true }
async-trait = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }

[dev-dependencies]
tempfile = { workspace = true }
