[package]
name = "trondb-wal"
version = "0.1.0"
edition = "2021"

[dependencies]
rmp-serde.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
crc32fast.workspace = true
tokio.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
